--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -21,18 +21,20 @@
     border: transparent;
 }
 
-.infoCardContainer{
+
+
+
+.infoCardContainer--vintage {
+    background-color: #EDCFD1;
     max-width:1260px;
     margin: 0;
     padding: 0;
 }
 
 
-.infoCardContainer--vintage {
-    background-color: #EDCFD1
-}
-
-
 .infoCardContainer--metal {
-    background-color: #e1e1e1
+    background-color: #e1e1e1;
+    max-width:1260px;
+    margin: 0;
+    padding: 0;
 }
