--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -17,10 +17,9 @@
 
 .infoCardCallActionContainer :global(.vtex-button):hover {
     color: gray;
-    background-color: rgb(170, 167, 167);
+    background-color: white;
     border: transparent;
 }
-
 .infoCardContainer{
     max-width:1260px;
     margin: 0;
