--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -21,14 +21,15 @@
     border: transparent;
 }
 
-.infoCardContainer{
+
+.infoCardContainer {
     max-width:1260px;
     margin: 0;
     padding: 0;
 }
 
 .infoCardContainer--vintage {
-    background-color: #EDCFD1
+    background-color: #edcfd1
 }
 
 
