--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -22,17 +22,18 @@
 }
 
 
-.infoCardContainer {
-    max-width:1260px;
-    margin: 0;
-    padding: 0;
-}
+
 
 .infoCardContainer--vintage {
-    background-color: #edcfd1
+    background-color: #EDCFD1
 }
 
 
 .infoCardContainer--metal {
     background-color: #e1e1e1
+}
+.infoCardContainer {
+    max-width:1260px;
+    margin: 0;
+    padding: 0;
 }
