--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -30,7 +30,7 @@
 
 
 .infoCardContainer--metal {
-    background-color: #e1e1e1
+    background-color: #E1E1E1
 }
 .infoCardContainer {
     max-width:1260px;
