--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -2,38 +2,31 @@
     font-family: serif;
     font-size: 2.25rem;
     font-weight: bold;
-    color: gray;
+    color: black;
     border: 2px solid black;
     padding: 24px;
-    color:black;
-
-}
-
-.infoCardCallActionContainer :global(.vtex-button) {
+  }
+  .infoCardContainer :hover {
+    background-color: white;
+  }
+  .infoCardCallActionContainer :global(.vtex-button) {
     color: white;
     background-color: gray;
     border: transparent;
-}
-
-.infoCardCallActionContainer :global(.vtex-button):hover {
+  }
+  .infoCardCallActionContainer :global(.vtex-button):hover {
     color: gray;
     background-color: white;
     border: transparent;
-}
-
-
-
-
-.infoCardContainer--vintage {
-    background-color: #EDCFD1
-}
-
-
-.infoCardContainer--metal {
-    background-color: #E1E1E1
-}
-.infoCardContainer {
-    max-width:1260px;
-    margin: 0;
+  }
+  .infoCardContainer--vintage {
+    background-color: #EDCFD1;
+  }
+  .infoCardContainer--metal {
+    background-color: #E1E1E1;
+  }
+  .infoCardContainer {
+    max-width: 1260px;
+    margin: 0 auto;
     padding: 0;
-}
+  }
